tests/langs/snapshots/r#mod__langs__base.rs_pub-priv-struct.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 70
  l: "struct TestStruct {\n"
  m: ^^^^^^^^^^^^^^^^^^^^^
- n: 71
  l: "    instance_var: String,\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 72
  l: "}\n"
  m: "^  "
