tests/langs/snapshots/r#mod__langs__base.rs_pub-self-enum.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 277
  l: "pub(self) enum PubSelfEnum {}\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
