tests/langs/snapshots/r#mod__langs__base.rs_pub-self-struct.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 262
  l: "pub(self) struct PubSelfStruct {}\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
