tests/langs/snapshots/r#mod__langs__base.rs_pub-struct.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 272
  l: "pub struct PubStruct {}\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^  "
