tests/langs/snapshots/r#mod__langs__base.rs_pub-super-enum.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 276
  l: "pub(super) enum PubSuperEnum {}\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
