tests/langs/snapshots/r#mod__langs__base.rs_pub-super-fn.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 258
  l: "pub(super) fn function_pub_super() {}\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
