tests/langs/snapshots/r#mod__langs__base.rs_pub-super-struct.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 271
  l: "pub(super) struct PubSuperStruct {}\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
