tests/langs/snapshots/r#mod__langs__base.rs_struct_named_PubSuperSelf.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 274
  l: "pub(self) struct PubSelfStruct {}\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
- n: 275
  l: "pub(super) struct PubSuperStruct {}\n"
  m: "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  "
