tests/langs/snapshots/r#mod__langs__base.rs_struct_named_Test.snap
---
source: tests/langs/mod.rs
expression: inscope_parts
---
- n: 72
  l: "struct TestStruct {\n"
  m: ^^^^^^^^^^^^^^^^^^^^^
- n: 73
  l: "    instance_var: String,\n"
  m: ^^^^^^^^^^^^^^^^^^^^^^^^^^^
- n: 74
  l: "}\n"
  m: "^  "
